search bar is now on top header and hamburger is aligned correctly

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -7,15 +7,16 @@
     --light-nav-text-colour: black;
     --light-hover-active-colour: #5c2246;
     --light-hamburger-icon-colour: black;
+    --light-dropdown-bg-colour: #dadada;
     --light_footer-bg-colour: #ecf1f1;
     
     /*dark mode colours*/
-
     --dark-header-bg-colour: #2a2c2c;
     --dark-header-boxshadow-colour: rgb(20, 20, 20, 0.151);
     --dark-nav-text-colour: #f2f5f7;
     --dark-hover-active-colour: #f2c7e2;
     --dark-hamburger-icon-colour: #f2f5f7;
+    --dark-dropdown-bg-colour: #262626;
     --dark-footer-bg-colour: #2a2c2c;
 }
 a {
@@ -112,6 +113,7 @@ header{
     cursor: pointer;
     display: flex;
     padding: 0;
+    margin-top: .2em;
     -webkit-app-region: no-drag;
   }
   .line {
@@ -154,9 +156,12 @@ header{
 /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
 .dropdown-container {
   display: none;
-  background-color: #262626;
+  background-color: var(--light-dropdown-bg-colour);
   padding: 8px 8px 8px 32px;
   width: 100%;
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--dark-dropdown-bg-colour);
+  }
 }
 
 /* Optional: Style the caret down icon */
@@ -184,10 +189,11 @@ header{
   }
   /* Style the search box inside the navigation bar */
 .search {
-  padding: 1em;
+  padding: .5em;
   border: none;
+  border-radius: 1.5em;
   -webkit-app-region: no-drag;
-  margin-top: 3em;
+  margin-top: .1em;
   margin-left: .3em;
   margin-right: .5em;
   font-size: 17px;
